# consilium-backend

./: consilium.db  consilium.db-shm  consilium.db-wal  pyproject.toml
.github/workflows/: deploy-backend.yml
app/: auth.py  chunking.py  config.py  consilium.db  database.py  dependencies.py  llm.py  main.py  models.py  rag.py  schemas.py  vectorstore.py
app/routers/: auth.py  knowledge.py  messages.py  patients.py  sessions.py  upload.py
consilium_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
deploy/: consilium.service  nginx.consilium.conf  redeploy.sh  setup_prod.sh
uploads/chroma_db/acbd95bd-5b12-4065-b0bf-040397972aed/: index_metadata.pickle
uploads/knowledge/chunks/0962f915-af64-4e31-8105-5d631ea0fc92/: 0000_chunk.md  0001_1_1     ______ ___-10.md  0002_1_2 ____ __________ .md  0003_1_3   ___________ ____________ _ .md  0004_1_3   ___________ ____________ _ .md  0005_1_3   ___________ ____________ _ .md  0006_1_6 _____ ______ .md  0007_1_7 .md  0008_1_7 .md  0009_1_8 .md  0010_1_8 .md  0011______________ ___ ____ __ __ _________ 1992 .md  0012_II_ ___________ .md  0013_III_ .md  0014_IV_ .md  0015_____ .md  0016________ .md  0017_______ ________ .md  0018____________ .md  0019_VII_ .md  0020_VII_ .md  0021________________ .md  0022________________ .md  0023________________ .md  0024________________ .md  0025________________ .md  0026________________ .md  0027________________ .md  0028________________ .md  0029________________ .md  0030________________ .md  0031________________ .md  0032________________ .md  0037____________ .md  (+90 more)
(+3944 files in other folders)
