[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consilium-backend"
version = "0.1.0"
description = "Consilium Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "bcrypt>=4.0,<5.0",
    "python-multipart>=0.0.6",
    "httpx>=0.27,<1.0",
    "docling>=2.0",
    "chromadb>=0.5",
]

[tool.setuptools]
packages = ["app", "app.routers"]

[project.scripts]
consilium = "app.main:main"

[tool.uv]
index-strategy = "unsafe-best-match"
environments = ["sys_platform == 'linux'"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# Override torch to use CPU-only — prevents NVIDIA/CUDA transitive deps
[dependency-groups]
torch-cpu = [
    "torch",
    "torchvision",
]
